--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "deepstream.io-msg-connector-template",
-  "version": "0.0.1",
-  "description": "template/scaffold for [deepstream](http://deepstream.io) message connector",
+  "name": "deepstream.io-msg-zmq",
+  "version": "0.1.0",
+  "description": "[deepstream](http://deepstream.io) ZeroMQ message connector",
   "main": "src/message-connector.js",
   "scripts": {
     "test": "mocha",
@@ -11,11 +11,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deepstreamIO/deepstream.io-msg-connector-template.git"
+    "url": "https://github.com/druide/deepstream.io-msg-zmq.git"
   },
-  "author": "deepstreamHub GmbH",
+  "author": "druide <ingvuil@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "zmq": "^2.15.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -28,7 +29,7 @@
     "sinon-chai": "^2.8.0"
   },
   "bugs": {
-    "url": "https://github.com/deepstreamIO/deepstream.io-msg-connector-template/issues"
+    "url": "https://github.com/druide/deepstream.io-msg-zmq/issues"
   },
   "homepage": "http://deepstream.io"
 }
